FlightPath 6.x Changelog
========================

2021-07-27
  Implemented check when searching for students, to make sure user has correct permissions to search for student in particular school.
  

2021-07-26
  Fixed bug when editing groups, where school_id was not correctly being loaded.

  Fixed bug in group definitions and group course repeats, where FP was not respecting the school_id.
  
  Set a default icon (major.gif) for new groups.
  
  Added "upcoming appointments" tab to the Calendar page, which displays events which are approaching.
  

2021-07-25
  Configured blank degrees to make use of the render system (so other modules can make changes more easily)
  

2021-07-23
  Added a few more details to render array in AdvisingScreen, when drawing course rows.  Also added argument to include the group a course is assigned to, if applicable, to
  draw_course_row().  This also helps the render engine and any modules which need it.
  

2021-07-14
  Fixed bug where form_error's was messing up markup_no_wrappers elements.

  Added extra validation on degree edit form, so that it stops you from adding a duplicate group with mismatched type or min hours.  Also made it
  so you can delete such a group.
  

2021-07-12
  Made it more clear that the currently used SMS service in Engagements is "SignalWire".  Also made sure that emails processed by Engagements were deleted after
  they were parsed, so they do not fill up the email server's Trash folder.
  

2021-07-11
  Fixed bug in engagements module where it was looking for a table which does not exist.
  
  Made it so when an appointment (with Zoom) is cancelled, it also deletes the Zoom meeting from zoom's servers.


2021-07-10
  Removed page titles from the Student search pages/forms.
  
  Added new CSS for printing.
  
  Added ability to add classes to collapsible fieldsets.
  

2021-07-09
  Implemented handling of numeric grades in FlightPath.  Basically, they must be converted to letter grades at the time